# serviceemail

./: .env.example  .gitignore  README.md  build.sh  main.py  pyproject.toml  requirements.txt
common/: constraints.py
correspondence/: sender.py
scheduling/: tasks.py
templates/: email_expired.html  email_on_date.html
